[package]
name = "git-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.2.0"
sha-1 = { version = "0.10.0", default-features = true }
chrono = { version = "0.4.15", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.116", features = ["derive"], optional = true }
thiserror = "1.0"
serde_json = "1.0"
project-root = "0.2.2"
mockall = "0.11.3"
mockall_double = "0.3.0"
